--- a/ethpic/app/index.html
+++ b/ethpic/app/index.html
@@ -2,10 +2,54 @@
   <head>
     <title>Embark</title>
     <link rel="stylesheet" href="css/app.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/ipfs-api/dist/index.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
-    <h3>Welcome to Embark!</h3>
-    <p>See the <a href="https://github.com/iurimatias/embark-framework/wiki">Wiki</a> to see what you can do with Embark!</p>
+    <div role="tabpanel" class="tab-pane active" id="blockchain">
+        <h3> 1. Set the value in the blockchain</h3>
+        <div class="form-group form-inline">
+          <input type="text" class="text form-control" value="10">
+          <input type="text" class="text2 form-control" value="10">
+          <button class="set btn btn-primary">Set Value</button>
+          <p>Once you set the value, the transaction will need to be mined and then the value will be updated on the blockchain.</p>
+        </div>
+
+        <h3> 2. Get the current value</h3>
+        <div class="form-group">
+          <div>
+            current value is <span class="value"></span>
+          </div>
+          <button class="get btn btn-primary">Get Value</button>
+          <p>Click the button to get the current value. The initial value is 100.</p>
+        </div>
+
+        <h3> 3. Contract Calls </h3>
+        <p>Javascript calls being made: </p>
+        <div class="logs">
+        </div>
+	</div>
+    <div role="tabpanel" class="tab-pane" id="storage">
+        <div class="error alert alert-danger" role="alert">The node you are using does not support IPFS. Please ensure <a href="https://github.com/ipfs/js-ipfs-api#cors" target="_blank">CORS</a> is setup for the IPFS node.</div>
+        <div id="storage-controls">
+
+        <h3>Save text to IPFS</h3>
+        <div class="form-group form-inline">
+          <input type="text" class="ipfsText text form-control" value="hello world!">
+          <button class="setIpfsText btn btn-primary">Save</button>
+          <p>generated Hash: <span class="textHash"></span></p>
+        </div>
+
+        <h3>Load text from IPFS given an hash</h3>
+        <div class="form-group form-inline">
+          <input type="text" class="textHash text form-control" size="60">
+          <button class="loadIpfsHash set btn btn-primary">Load</button>
+          <p>result: <span class="ipfsText"></span></p>
+        </div>
+        <div class="logs">
+          <br> EmbarkJS.Storage.setProvider('ipfs',{server: 'localhost', port: '5001'})
+        </div>
+      </div>
   </body>
 </html>
