Support from multiple devices

--- a/ethpic/app/index.html
+++ b/ethpic/app/index.html
@@ -48,7 +48,7 @@
           <p>result: <span class="ipfsText"></span></p>
         </div>
         <div class="logs">
-          <br> EmbarkJS.Storage.setProvider('ipfs',{server: 'localhost', port: '5001'})
+          <br> EmbarkJS.Storage.setProvider('ipfs',{server: '10.145.137.74', port: '5001'})
         </div>
       </div>
   </body>
