working on new contract

--- a/ethpic/app/index.html
+++ b/ethpic/app/index.html
@@ -12,7 +12,17 @@
       <input type="text" class="inputTopic" value="topic_one">
       <input type="file" class="userUploadFile">
       <p>generated hash: <span class="userFileIpfsHash"></span></p>
-      <button class="userSet">Set Value</button>
+      <button class="dataSet">Set Value</button>
+
+      <button class="userGet">Get user(see console)</button>
+      <button class="topicGet">Get topic(see console)</button>
+      <input type="text" class="photoHash" value="photo hash to del, get from console">
+      <button class="photoDel">Delete photo(see console)</button>
+      
+
+
+
+
 
 
       <div role="tabpanel" class="tab-pane" id="storage">
